--- a/css/style1.css
+++ b/css/style1.css
@@ -65,32 +65,34 @@
 				100% { transform: rotateX(35deg) rotateY(55deg) rotateZ(360deg); }
 			}
 
-
+/*
 			.settings{
 				height: 100px;
 			}
 			.items{
+				width: 400px;
+				height: 100vh;
 				position: absolute;
-				left: 50%;
-				transform: translateX(-50%);			
-				bottom: -250px;
-				border: 1px solid #000000;
+				left: -320px;
+				
+				
+				border: 10px solid #ff0000;
 				transition: all 0.5s ease;
 			}
 			.items:hover{
-				bottom: 0px;
+				left: 0px;
 				transition: all 0.5s ease;
 			}
-			.items-color, .items-color1{
+			.items-color, .items-color1, .items-color2{
 				display: flex;
 				flex-wrap: wrap;				
 				width: 310px;				
 				padding: 0px;
 				margin: 0px;
-				border: 1px solid #000000;
+				
 			}
 
-			.item-color, .item-color1{				
+			.item-color, .item-color1, .item-color2{				
 				width: 10px;
 				height: 15px;
 				padding: 0px;
@@ -103,9 +105,88 @@
 				
 				
 			}
-			.hover, .hover1{
+			.hover, .hover1, .hover2{
 				text-align: center;
 			}
 			.footer{
 				height: 25px;
 			}
+
+
+
+
+
+
+.container1 {
+ 
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+}
+.pos1{
+	 position: absolute;
+	 left: 50px;
+  transform: translate(-50%,0);
+}
+
+#color-picker {
+  border: 3px solid rgba(15, 15, 15, 0.2);
+}
+
+.info {
+  width: 12em;
+  display: flex;
+  margin-left: 4em;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.selected {
+  width: 50px;
+  height: 50px;
+  border-radius: 100%;
+  border: 2px solid rgba(15, 15, 15, 0.2);
+}*/
+
+.container1 {
+
+	max-width: 1220px;
+
+}
+
+.items {
+	position: absolute;
+	left: 50%;
+	transform: translate(-50%,0);
+	bottom: 100px;
+	user-select: none;
+	display: flex;
+	gap: 10px;
+}
+.none {
+	display: none;
+}
+.item {
+	border: 2px solid #aaa;
+	height: 85px;
+}
+.text{
+	text-align: center;
+
+}
+.color{
+	border: 2px solid #aaa;
+	box-sizing: border-box;
+	padding: 0;
+	background-color: #2ff;
+}
+
+#canvas1, #canvas2, #canvas3 {
+	/**/
+	cursor: pointer;
+
+
+}
