--- a/css/style_main.css
+++ b/css/style_main.css
@@ -57,16 +57,12 @@ p {
 }
 
 .footer {
-	background-color: rgba(0,0,0,0.5);
 	display: flex;
-	justify-content: space-between;
+	justify-content: center;
 	gap: 50px;
 	padding: 10px 0;
 }
 
-.footer_item {
-	margin: 0 10px;
-}
 
 
 
